syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./cluster";

message Action{
  string key = 1;
  optional string value = 2;
  optional uint64 revision = 3;
}

message Proposal{
  repeated Action actions = 1;
}

message WriteReply{
  bool success = 1;
  uint64 revision = 2;
}

message ReadRequestMessage{
  string key = 1;
}

message ReadReply{
  optional string value = 1;
  uint64 revision = 2;
}

message ReadRevisionReply{
  uint64 revision =1;
}

message PrepareMessage{
  uint64 paxos_id = 1;
  uint64 round = 2;
}

message PromiseMessage{
  // ID and round unnecessary because promise is a reply to a prepare
  uint64 last_good_round = 1;
  bool ack = 2;
  optional Proposal proposal = 3;
}

message AcceptMessage{
  uint64 paxos_id = 1;
  uint64 round = 2;
  Proposal proposal = 3;
}

message AcceptResponse{
  bool ack = 1;
}

message AcceptedMessage{
  uint64 paxos_id = 1;
  uint64 round = 2;
  uint64 sender_id = 3;
}

message PromotionReply{
  uint64 leader = 1;
}

message State{
  uint64 commited_paxos_id = 1;
  uint64 min_paxos_id = 2;
  uint64 max_paxos_id = 3;
  Proposal data_state = 4;
}

message CommitedPaxosID{
  uint64 commited_paxos_id = 1;
}

message KeyRev{
  string key = 1;
  uint64 revision = 2;
}

message KeyRevsList{
  repeated KeyRev keyrevs = 1;
}

message ListRequest{
  bool omitDeleted = 1;
}

message FillInProposalMessage{
  uint64 paxos_id = 1;
  uint64 round = 2;
}

service Paxos{
  rpc Prepare(PrepareMessage) returns (PromiseMessage) {}
  rpc Accept(AcceptMessage) returns (AcceptResponse){}
  rpc Accepted(AcceptedMessage) returns (google.protobuf.Empty){}
  rpc SuggestPromoteSelf(google.protobuf.Empty) returns (PromotionReply){}
  rpc GetCommitedPaxosID(google.protobuf.Empty) returns (CommitedPaxosID){}
  rpc FillInProposal(FillInProposalMessage) returns (Proposal){}
}

service LeaderRequests{
  rpc WriteToLeader(Action) returns (WriteReply){}
  rpc ReadFromLeader(ReadRequestMessage) returns (ReadReply){}
  rpc ReadRevisionFromLeader(ReadRequestMessage) returns (ReadRevisionReply){}
  rpc ReadListFromLeader(ListRequest) returns (KeyRevsList){}
  rpc RequestState(google.protobuf.Empty) returns (State){}
}

