syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./paxos";

message ProposalMessage{
  string key = 1;
  string value = 2;
}

message InitiatiationRequest{
  uint64 next_paxos_id = 1;
}

message ReadRequestMessage{
  string key = 1;
}

message ReadResponse{
  optional string value = 1;
}
message PrepareMessage{
  uint64 paxos_id = 1;
  uint64 round = 2;
}

message PromiseMessage{
  // ID and round unnecessary because promise is a reply to a prepare
  uint64 last_good_round = 1;
  bool ack = 2;
  optional ProposalMessage proposal = 3;
}

message AcceptMessage{
  uint64 paxos_id = 1;
  uint64 round = 2;
  ProposalMessage proposal = 3;
}

message AcceptResponse{
  bool ack = 1;
}

message AcceptedMessage{
  uint64 paxos_id = 1;
  uint64 round = 2;
  bool ack = 3;
  ProposalMessage proposal = 4;
}

service Paxos{
  rpc Prepare(PrepareMessage) returns (PromiseMessage) {}
  rpc Accept(AcceptMessage) returns (AcceptResponse){}
  rpc Accepted(AcceptedMessage) returns (google.protobuf.Empty){}
  rpc InitiateRound(InitiatiationRequest) returns (google.protobuf.Empty){}
}
